src/index.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');

:root {
    --custom-dark: #2C2C2C;
    --cutom-light: #E7E9EE;
    --custom-black: #171717;
    --custom-red: #FE0000;
    --custom-blue: #54A9E9;
    --custom-orange: #FF8B49;
}

@media screen and (min-width: 992.2px) {
    :root {
        --container-height: 288px;
        --container-max-height: 33vh;
        --container-max-width: 454px;
    }
}
@media screen and (max-width: 992px) {
    :root {
        --container-max-height: 33vh;
        --container-height: 288px;
        --container-max-width: 454px;
    }
}


input, button, textarea {
    -webkit-appearance: none;
	-moz-appearance:    none;
	appearance:         none;
}


.btn {
    position: relative;

    padding: 10px;
    box-sizing: border-box;
    background-color: var(--custom-dark);
    border: none;
    border-radius: 16px;
    -webkit-border-radius: 16px;
    -moz-border-radius: 16px;
    
    color: white;
    font-family: inherit;
    cursor: pointer;
    
    -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none;   /* Chrome/Safari/Opera */
    -khtml-user-select: none;    /* Konqueror */
    -moz-user-select: none;      /* Firefox */
    -ms-user-select: none;       /* Internet Explorer/Edge */
    user-select: none;           /* Non-prefixed version, currently
                                    not supported by any browser */

    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
    -webkit-tap-highlight-color: transparent;
}
.btn:hover > *:not(.btn__badge) {
    opacity: .7;
}
.btn:active > *:not(.btn__badge) {
    opacity: .5;
}

.btn_color_blue {
    background-color: var(--custom-blue);
}

.btn__content {
    width: 100%;
    height: 100%;

    display: flex;
    align-items: center;
    justify-content: center;
}
.btn__content > img {
    height: 100%;
}

.btn__badge {
    position: absolute;
    display: flex;

    width: 27px;
    height: 27px;
    top: 0;
    right: 0;
    transform: translate(30%, -50%);

    justify-content: center;
    align-content: center;
    padding: 2px;
    box-sizing: border-box;

    outline: 1px solid var(--custom-blue);
    border-radius: 50%;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
}
.btn__badge > span {
    display: inline-block;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;

    font-size: 1.25rem;
    line-height: 1.25rem;
    text-align: center;
}

.btn__badge_color_red {
    color: white;
    background-color: var(--custom-red);
    outline: none;
}
.btn__badge_color_blue {
    color: white;
    background-color: var(--custom-blue);
    outline: none;
}


.msg-form {
    width: 100%;
    height: 61px;
    position: sticky;

    margin: auto;
    padding: 4pt;
    box-sizing: border-box;
    border-radius: 12px;
    -webkit-border-radius: 12px;
    -moz-border-radius: 12px;

    background-color: #171717;

    display: flex;
    gap: 6pt;
    align-items: stretch;
}

.msg-form__field {
    height: 100%;
    width: 100%;
    background-color: var(--custom-dark);

    padding: 0;
    padding-left: 8pt;

    color: white;
    font-size: 1.25rem;
    outline: none;
    border: 0;
    border-radius: 12px;
    -webkit-border-radius: 12px;
    -moz-border-radius: 12px;
}
.msg-form__field:focus {
    outline: 2px solid var(--custom-blue);
}

.msg-form__send-btn {
    padding: 0;
    padding-right: 5px;
    height: 100%;

    border-radius: 12px;
    -webkit-border-radius: 12px;
    -moz-border-radius: 12px;
}


#root {
    width: 100%;
    height: 100%;

    position: fixed;
    top: 0;
    left: 0;
}


.page {
    margin: 0;
    background-color: var(--custom-black);
    color: var(--cutom-light);

    font-family: "Open Sans", sans-serif;

    width: 100vw;
    height: 100vh;

    -webkit-text-size-adjust: none;
}


.app {
    height: 100%;
    max-width: var(--container-max-width);
    margin-left: auto;
    margin-right: auto;

    display: flex;
    flex-direction: column;

    box-sizing: border-box;
    padding: 12pt 12pt;
    padding-bottom: 0;
}


.app__container {
    height: var(--container-height);
    max-height: var(--container-max-height);

    border-radius: 16px;
    -webkit-border-radius: 16px;
    -moz-border-radius: 16px;

    overflow: hidden;
}
.app__container:not(:last-of-type) {
    margin-bottom: 16pt;
}

.app__container_empty {
    background-color: var(--cutom-light);
    background-image: url("imgs/anonim-girl_placeholder.png");
    background-repeat: no-repeat;
    background-size: contain;
    background-position: 50%;
}

.app__container_dynamic {
    height: 100%;
    max-height: 100%;
}


.app__footer {
    height: 48px;
    margin-top: auto;
    padding-top: 24pt;
    padding-bottom: 8pt;
    box-sizing: content-box;
    
    max-width: inherit;
    
    border-radius: 16px;
    -webkit-border-radius: 16px;
    -moz-border-radius: 16px;
}

.app__footer_hidden {
    position: absolute;
    visibility: hidden;
    opacity: 0;
    width: 0;
    height: 0;
    z-index: -1000;
}


.bottom-menu {
    display: flex;
    gap: 8pt;

    height: inherit;
    max-width: inherit;
    width: 100%;
    padding-left: 12pt;
    padding-right: 12pt;
    padding-top: 0;
    box-sizing: border-box;

    transform: translateX(-12pt);

    position: fixed;
    bottom: 12pt;
    z-index: 1000;
}

.bottom-menu__btn_mod_next {
    width: 100%;
    font-size: 1.75rem;
}
.bottom-menu__btn_mod_next > .btn__content {
    gap: 16pt;
}


.dialog {
    height: 100%;
    max-height: inherit;

    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.dialog__msg-list {
    padding: 8pt 0;
    margin: 0;

    height: 100%;
    overflow-y: scroll;
    -webkit-overflow-scrolling: touch;
    
    list-style: none;
    color: black;
}

.dialog__msg-item {
    width: 100%;
    padding: 0;
    margin: 0;
    overflow: hidden;
}
.dialog__msg-item:not(:last-child) {
    margin-bottom: 16pt;
}


.msg {
    position: relative;
    color: white;
    padding: 8pt 16pt;
    margin: 0;
    border-radius: 16px;
    -webkit-border-radius: 16px;
    -moz-border-radius: 16px;
}
.msg::before {
    content: "";
    position: absolute;

    width: 20px;
    height: 20px;
    background-color: transparent;

    border-style: solid;
    border-color: transparent;
    border-width: 20px;

    bottom: -10px;
}

.msg_user_current {
    max-width: 264px;
    margin-left: auto;
    margin-right: 8pt;

    background-color: var(--custom-blue);
}
.msg_user_current::before {
    border-bottom-color: var(--custom-blue);
    border-right-width: 0;

    border-radius: 0 100%;
    -webkit-border-radius: 0 100%;
    -moz-border-radius: 0 100%;
    right: -14.5px;

    transform-origin: center; 
    transform:rotate(35deg);
}
.msg_user_current .msg__header {
    color: var(--custom-orange);
}
.msg_user_companion {
    max-width: 256px;
    margin-right: auto;
    margin-left: 8pt;

    background-color: var(--custom-dark);
}
.msg_user_companion .msg__header {
    color: var(--custom-blue);
}
.msg_user_companion::before {
    border-bottom-color: var(--custom-dark);
    border-left-width: 0;

    border-radius: 100% 0;
    -webkit-border-radius: 100% 0;
    -moz-border-radius: 100% 0;
    left: -14.5px;

    transform-origin: center; 
    transform:rotate(-35deg);
}

.msg__header {
    position: relative;
    font-size: .87rem;
}

.msg__content {
    position: relative;
}

.msg__text {
    font-size: 1rem;
    margin-top: 0;
}
.msg__text:last-child {
    margin-bottom: 0;
}

